--- a/src/main/webapp/Sem3/Week37/Wednesday/index.html
+++ b/src/main/webapp/Sem3/Week37/Wednesday/index.html
@@ -11,7 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>Look in the console (crt + shift + j) </div>
         <a href="TheJavaScriptArray.html"><button>Opgave 1</button></a>TheJavaScriptArray<br>   
         <a href="JavaScriptDay1.html"><button>Opgave 2</button></a>JavaScript day 1<br>  
     </body>
